updates to notebooks

--- a/notebooks/predicts_processing.ipynb
+++ b/notebooks/predicts_processing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "85a96b6a-8df1-4c31-a01c-d4b74516f7d7",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "16327f97-59c5-4d82-94df-32105ade5536",
    "metadata": {
     "tags": []
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ea62eacb-5c57-40bc-960c-06caf8cf5335",
    "metadata": {
     "tags": []
@@ -198,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pd/qpp_vpcn3wv209_68c5q1_r80000gn/T/ipykernel_78408/2598404666.py:2: DtypeWarning: Columns (3,22,62,66) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/pd/qpp_vpcn3wv209_68c5q1_r80000gn/T/ipykernel_25370/2598404666.py:2: DtypeWarning: Columns (3,22,62,66) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_predicts_orig = pd.read_csv(\"../../data/PREDICTS/PREDICTS_2016/data.csv\")\n"
      ]
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "4e7b4bcf-ad47-4359-b746-a826273a8987",
    "metadata": {
     "tags": []
@@ -222,7 +222,7 @@
        "(3278056, 68)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "61e88ec4-2d20-46f0-b0e0-3afcbdcf49f5",
    "metadata": {
     "tags": []
@@ -260,7 +260,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pd/qpp_vpcn3wv209_68c5q1_r80000gn/T/ipykernel_78408/1272704116.py:2: DtypeWarning: Columns (3,20,23,50,66,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/pd/qpp_vpcn3wv209_68c5q1_r80000gn/T/ipykernel_25370/1272704116.py:2: DtypeWarning: Columns (3,20,23,50,66,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_predicts_new = pd.read_csv(\"../../data/PREDICTS/PREDICTS_2022/data.csv\")\n"
      ]
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "75df9041-2a71-4651-bf54-448e8af2734e",
    "metadata": {
     "tags": []
@@ -284,7 +284,7 @@
        "(1040752, 72)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e73379f3-4c07-4813-ac5c-9e572d534f32",
    "metadata": {
     "tags": []
@@ -314,7 +314,7 @@
      "output_type": "stream",
      "text": [
       "[]\n",
-      "['Source_for_predominant_habitat', 'Predominant_habitat', 'Eco_region_distance_metres', 'Max_linear_extent']\n"
+      "['Max_linear_extent', 'Eco_region_distance_metres', 'Predominant_habitat', 'Source_for_predominant_habitat']\n"
      ]
     }
    ],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "26c8c5c9-e0b2-491a-9b6e-589bc137787b",
    "metadata": {
     "tags": []
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "8c3009df-35a7-4851-8d4c-e7c0c6cecbdf",
    "metadata": {
     "tags": []
@@ -975,7 +975,7 @@
        "4                                     63.5  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,6 +1060,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "27ca3dfa-9268-42e9-8617-ef9ad7ae5d34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4318808, 68)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_predicts.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "433f229f-e99f-4c0b-a89b-2ea8e3d35458",
    "metadata": {
@@ -1081,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "290e385d-9dbe-4415-86f3-e0da99d8448d",
    "metadata": {
     "tags": []
@@ -1115,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "f1b9fcdc-8ac5-4608-a046-cf1eedc88456",
    "metadata": {
     "tags": []
@@ -1226,13 +1247,34 @@
        "9  AD1_2001__Liow 2  5  POINT (103.80361 1.28278)      Asia"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gdf_sites.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5f1ad0be-8c14-44a1-b951-24667242bb27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35736, 3)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_sites.shape"
    ]
   }
  ],
