small notebook update

--- a/notebooks/lme_benchmark.ipynb
+++ b/notebooks/lme_benchmark.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 600,
    "id": "7b73922d-4c01-47ef-89a5-91dbb37addfb",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from scipy.special import expit\n",
-    "from pymer4.models import Lmer"
+    "from pymer4.models import Lmer\n",
+    "from itertools import product"
    ]
   },
   {
@@ -563,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 589,
    "id": "8b59a945-aa01-4f5f-b981-2bace5f31c44",
    "metadata": {},
    "outputs": [],
@@ -575,10 +576,10 @@
     "groups = [\"SS\", \"SSB\"]\n",
     "\n",
     "# Create list of all covariates to be used\n",
-    "covariates = [\n",
+    "fe_vars = [\n",
     "    col\n",
     "    for col in df.columns\n",
-    "    if col not in [\"SS\", \"SSB\", \"SSBS\", \"Max_scaled_abundance_sqrt\"]\n",
+    "    if col not in [\"Intercept\", \"SS\", \"SSB\", \"SSBS\", \"Max_scaled_abundance_sqrt\"]\n",
     "]"
    ]
   },
@@ -592,13 +593,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 583,
    "id": "b63504d8-44b1-4def-941e-981fe2950079",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit_lme_model(df, response, covariates):\n",
-    "    formula = f\"{response} ~ {' + '.join(covariates)} + (1|SS) + (1|SSB)\"\n",
+    "def fit_lme_model(df, response, fe_vars, re_vars, independent_re=False):\n",
+    "    fe_formula = \" + \".join(fe_vars)\n",
+    "\n",
+    "    if independent_re:\n",
+    "        re_study_formula = f\"({' + '.join(re_vars)}|SS)\"\n",
+    "        re_block_formula = f\"({' + '.join(re_vars)}|SSB)\"\n",
+    "    else:\n",
+    "        re_study_formula = \" + \".join(f\"({var}|SS)\" for var in re_vars)\n",
+    "        re_block_formula = \" + \".join(f\"({var}|SSB)\" for var in re_vars)\n",
+    "\n",
+    "    re_study_formula = \" + \".join(f\"({var}|SS)\" for var in random_slope_vars)\n",
+    "    formula = f\"{response} ~ {fe_formula} + {re_study_formula} + {re_block_formula}\"\n",
+    "\n",
     "    model = Lmer(formula, data=df)\n",
     "    model.fit(conf_int=\"Wald\", summary=False, REML=True)\n",
     "\n",
@@ -607,17 +619,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 598,
    "id": "8ca4f079-ade1-46ae-9618-5f5d5a93e033",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = fit_lme_model(df, response, covariates)"
+    "model = fit_lme_model(df, response, fe_vars, re_vars=None, independent_re=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 599,
    "id": "09f7d7ab-fe1e-4215-b578-2a7cb83c7466",
    "metadata": {},
    "outputs": [
@@ -626,9 +638,9 @@
      "output_type": "stream",
      "text": [
       "Linear mixed model fit by REML [’lmerMod’]\n",
-      "Formula: Max_scaled_abundance_sqrt~Intercept+Primary_vegetation_Light_use+Primary_vegetation_Intense_use+Secondary_vegetation_Minimal_use+Secondary_vegetation_Light_use+Secondary_vegetation_Intense_use+Cropland_Minimal_use+Cropland_Light_Intense+Pasture_Minimal_use+Pasture_Light_Intense+Urban_All_uses+Pop_density_1km_log+Road_density_50km_cbrt+Mean_pop_density_1km_log+Primary_vegetation_Light_use_x_Pop_density_1km_log+Primary_vegetation_Intense_use_x_Pop_density_1km_log+Secondary_vegetation_Minimal_use_x_Pop_density_1km_log+Secondary_vegetation_Light_use_x_Pop_density_1km_log+Secondary_vegetation_Intense_use_x_Pop_density_1km_log+Cropland_Minimal_use_x_Pop_density_1km_log+Cropland_Light_Intense_x_Pop_density_1km_log+Pasture_Minimal_use_x_Pop_density_1km_log+Pasture_Light_Intense_x_Pop_density_1km_log+Urban_All_uses_x_Pop_density_1km_log+Primary_vegetation_Light_use_x_Road_density_50km_cbrt+Primary_vegetation_Intense_use_x_Road_density_50km_cbrt+Secondary_vegetation_Minimal_use_x_Road_density_50km_cbrt+Secondary_vegetation_Light_use_x_Road_density_50km_cbrt+Secondary_vegetation_Intense_use_x_Road_density_50km_cbrt+Cropland_Minimal_use_x_Road_density_50km_cbrt+Cropland_Light_Intense_x_Road_density_50km_cbrt+Pasture_Minimal_use_x_Road_density_50km_cbrt+Pasture_Light_Intense_x_Road_density_50km_cbrt+Urban_All_uses_x_Road_density_50km_cbrt+(1|SS)+(1|SSB)\n",
+      "Formula: Max_scaled_abundance_sqrt~Primary_vegetation_Light_use+Primary_vegetation_Intense_use+Secondary_vegetation_Minimal_use+Secondary_vegetation_Light_use+Secondary_vegetation_Intense_use+Cropland_Minimal_use+Cropland_Light_Intense+Pasture_Minimal_use+Pasture_Light_Intense+Urban_All_uses+Pop_density_1km_log+Road_density_50km_cbrt+Mean_pop_density_1km_log+Primary_vegetation_Light_use_x_Pop_density_1km_log+Primary_vegetation_Intense_use_x_Pop_density_1km_log+Secondary_vegetation_Minimal_use_x_Pop_density_1km_log+Secondary_vegetation_Light_use_x_Pop_density_1km_log+Secondary_vegetation_Intense_use_x_Pop_density_1km_log+Cropland_Minimal_use_x_Pop_density_1km_log+Cropland_Light_Intense_x_Pop_density_1km_log+Pasture_Minimal_use_x_Pop_density_1km_log+Pasture_Light_Intense_x_Pop_density_1km_log+Urban_All_uses_x_Pop_density_1km_log+Primary_vegetation_Light_use_x_Road_density_50km_cbrt+Primary_vegetation_Intense_use_x_Road_density_50km_cbrt+Secondary_vegetation_Minimal_use_x_Road_density_50km_cbrt+Secondary_vegetation_Light_use_x_Road_density_50km_cbrt+Secondary_vegetation_Intense_use_x_Road_density_50km_cbrt+Cropland_Minimal_use_x_Road_density_50km_cbrt+Cropland_Light_Intense_x_Road_density_50km_cbrt+Pasture_Minimal_use_x_Road_density_50km_cbrt+Pasture_Light_Intense_x_Road_density_50km_cbrt+Urban_All_uses_x_Road_density_50km_cbrt+(1|SS)+(1|SSB)\n",
       "\n",
-      "Family: gaussian\t Inference: bootstrapped\n",
+      "Family: gaussian\t Inference: parametric\n",
       "\n",
       "Number of observations: 7732\t Groups: {'SSB': 774.0, 'SS': 277.0}\n",
       "\n",
@@ -646,40 +658,40 @@
       "Fixed effects:\n",
       "\n",
       "                                                    Estimate  2.5_ci  97.5_ci  \\\n",
-      "(Intercept)                                            0.669   0.639    0.695   \n",
-      "Primary_vegetation_Light_use                          -0.015  -0.035    0.006   \n",
-      "Primary_vegetation_Intense_use                        -0.033  -0.066    0.004   \n",
-      "Secondary_vegetation_Minimal_use                      -0.025  -0.044   -0.005   \n",
+      "(Intercept)                                            0.669   0.644    0.695   \n",
+      "Primary_vegetation_Light_use                          -0.015  -0.034    0.004   \n",
+      "Primary_vegetation_Intense_use                        -0.033  -0.066    0.000   \n",
+      "Secondary_vegetation_Minimal_use                      -0.025  -0.045   -0.004   \n",
       "Secondary_vegetation_Light_use                        -0.022  -0.040   -0.005   \n",
-      "Secondary_vegetation_Intense_use                      -0.090  -0.108   -0.069   \n",
-      "Cropland_Minimal_use                                  -0.001  -0.037    0.035   \n",
-      "Cropland_Light_Intense                                -0.148  -0.200   -0.088   \n",
-      "Pasture_Minimal_use                                   -0.019  -0.061    0.027   \n",
-      "Pasture_Light_Intense                                 -0.095  -0.132   -0.056   \n",
-      "Urban_All_uses                                         0.027  -0.033    0.086   \n",
-      "Pop_density_1km_log                                   -0.026  -0.044   -0.007   \n",
-      "Road_density_50km_cbrt                                 0.014  -0.007    0.035   \n",
-      "Mean_pop_density_1km_log                              -0.007  -0.035    0.019   \n",
-      "Primary_vegetation_Light_use_x_Pop_density_1km_log     0.023   0.002    0.044   \n",
-      "Primary_vegetation_Intense_use_x_Pop_density_1k...    -0.008  -0.045    0.026   \n",
-      "Secondary_vegetation_Minimal_use_x_Pop_density_...    -0.009  -0.027    0.011   \n",
-      "Secondary_vegetation_Light_use_x_Pop_density_1k...     0.010  -0.009    0.027   \n",
-      "Secondary_vegetation_Intense_use_x_Pop_density_...     0.036   0.013    0.055   \n",
-      "Cropland_Minimal_use_x_Pop_density_1km_log             0.026  -0.013    0.061   \n",
-      "Cropland_Light_Intense_x_Pop_density_1km_log           0.020  -0.052    0.081   \n",
-      "Pasture_Minimal_use_x_Pop_density_1km_log              0.062   0.013    0.107   \n",
-      "Pasture_Light_Intense_x_Pop_density_1km_log            0.022  -0.013    0.057   \n",
-      "Urban_All_uses_x_Pop_density_1km_log                  -0.050  -0.094   -0.010   \n",
-      "Primary_vegetation_Light_use_x_Road_density_50k...    -0.039  -0.062   -0.016   \n",
-      "Primary_vegetation_Intense_use_x_Road_density_5...     0.059   0.025    0.098   \n",
-      "Secondary_vegetation_Minimal_use_x_Road_density...    -0.005  -0.021    0.014   \n",
-      "Secondary_vegetation_Light_use_x_Road_density_5...    -0.021  -0.041   -0.004   \n",
-      "Secondary_vegetation_Intense_use_x_Road_density...    -0.031  -0.052   -0.011   \n",
-      "Cropland_Minimal_use_x_Road_density_50km_cbrt         -0.032  -0.067   -0.002   \n",
-      "Cropland_Light_Intense_x_Road_density_50km_cbrt       -0.096  -0.138   -0.050   \n",
-      "Pasture_Minimal_use_x_Road_density_50km_cbrt           0.019  -0.044    0.083   \n",
-      "Pasture_Light_Intense_x_Road_density_50km_cbrt        -0.053  -0.096   -0.009   \n",
-      "Urban_All_uses_x_Road_density_50km_cbrt                0.057  -0.014    0.126   \n",
+      "Secondary_vegetation_Intense_use                      -0.090  -0.108   -0.072   \n",
+      "Cropland_Minimal_use                                  -0.001  -0.037    0.036   \n",
+      "Cropland_Light_Intense                                -0.148  -0.203   -0.093   \n",
+      "Pasture_Minimal_use                                   -0.019  -0.060    0.023   \n",
+      "Pasture_Light_Intense                                 -0.095  -0.132   -0.058   \n",
+      "Urban_All_uses                                         0.027  -0.034    0.088   \n",
+      "Pop_density_1km_log                                   -0.026  -0.044   -0.008   \n",
+      "Road_density_50km_cbrt                                 0.014  -0.009    0.037   \n",
+      "Mean_pop_density_1km_log                              -0.007  -0.034    0.021   \n",
+      "Primary_vegetation_Light_use_x_Pop_density_1km_log     0.023   0.003    0.043   \n",
+      "Primary_vegetation_Intense_use_x_Pop_density_1k...    -0.008  -0.041    0.024   \n",
+      "Secondary_vegetation_Minimal_use_x_Pop_density_...    -0.009  -0.028    0.010   \n",
+      "Secondary_vegetation_Light_use_x_Pop_density_1k...     0.010  -0.008    0.028   \n",
+      "Secondary_vegetation_Intense_use_x_Pop_density_...     0.036   0.015    0.056   \n",
+      "Cropland_Minimal_use_x_Pop_density_1km_log             0.026  -0.011    0.063   \n",
+      "Cropland_Light_Intense_x_Pop_density_1km_log           0.020  -0.043    0.082   \n",
+      "Pasture_Minimal_use_x_Pop_density_1km_log              0.062   0.018    0.105   \n",
+      "Pasture_Light_Intense_x_Pop_density_1km_log            0.022  -0.015    0.059   \n",
+      "Urban_All_uses_x_Pop_density_1km_log                  -0.050  -0.090   -0.010   \n",
+      "Primary_vegetation_Light_use_x_Road_density_50k...    -0.039  -0.060   -0.018   \n",
+      "Primary_vegetation_Intense_use_x_Road_density_5...     0.059   0.025    0.093   \n",
+      "Secondary_vegetation_Minimal_use_x_Road_density...    -0.005  -0.023    0.014   \n",
+      "Secondary_vegetation_Light_use_x_Road_density_5...    -0.021  -0.039   -0.004   \n",
+      "Secondary_vegetation_Intense_use_x_Road_density...    -0.031  -0.051   -0.011   \n",
+      "Cropland_Minimal_use_x_Road_density_50km_cbrt         -0.032  -0.064    0.000   \n",
+      "Cropland_Light_Intense_x_Road_density_50km_cbrt       -0.096  -0.138   -0.053   \n",
+      "Pasture_Minimal_use_x_Road_density_50km_cbrt           0.019  -0.043    0.081   \n",
+      "Pasture_Light_Intense_x_Road_density_50km_cbrt        -0.053  -0.096   -0.011   \n",
+      "Urban_All_uses_x_Road_density_50km_cbrt                0.057  -0.014    0.128   \n",
       "\n",
       "                                                       SE        DF  T-stat  \\\n",
       "(Intercept)                                         0.013   384.574  51.166   \n",
@@ -987,6 +999,112 @@
    "source": [
     "model.plot_summary();"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d6eb4fa-52ba-4b88-98c4-4fc63a630734",
+   "metadata": {},
+   "source": [
+    "## Testing random slope models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 597,
+   "id": "eea66eb4-fbc0-4b9a-8832-92dda51221ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_lme_model(df, response, fe_vars, re_vars=None, independent_re=False):\n",
+    "    fe_formula = \" + \".join(fe_vars)\n",
+    "\n",
+    "    if re_vars:\n",
+    "        if independent_re:\n",
+    "            re_study_formula = f\"({' + '.join(re_vars)}|SS)\"\n",
+    "            re_block_formula = f\"({' + '.join(re_vars)}|SSB)\"\n",
+    "        else:\n",
+    "            re_study_formula = \" + \".join(f\"({var}|SS)\" for var in re_vars)\n",
+    "            re_block_formula = \" + \".join(f\"({var}|SSB)\" for var in re_vars)\n",
+    "\n",
+    "        formula = f\"{response} ~ {fe_formula} + {re_study_formula} + {re_block_formula}\"\n",
+    "\n",
+    "    else:\n",
+    "        formula = f\"{response} ~ {fe_formula} + (1|SS) + (1|SSB)\"\n",
+    "\n",
+    "    model = Lmer(formula, data=df)\n",
+    "    model.fit(conf_int=\"Wald\", summary=False, REML=True)\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 594,
+   "id": "82ff68e0-dd9b-4e48-8e27-502d7b401951",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re_vars = covariates[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 595,
+   "id": "f9d07c48-bdbc-4db1-8a96-3d6285609757",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_random_slopes(df, response, fe_vars, re_vars):\n",
+    "\n",
+    "    base_model_aic = fit_lme_model(\n",
+    "        df, response, fe_vars, re_vars=None, independent_re=False\n",
+    "    ).AIC\n",
+    "\n",
+    "    re_candidates = []\n",
+    "    for var in fe_vars:\n",
+    "        candidate_model_aic = fit_lme_model(\n",
+    "            df, response, fe_vars, re_vars, independent_re=False\n",
+    "        ).AIC\n",
+    "        \n",
+    "        if candidate_model_aic > base_model_aic:\n",
+    "            re_candidates.append(var)\n",
+    "\n",
+    "        if re_candidates:  # Check that the dict is not empty\n",
+    "            \n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fb8f069-bc5e-4cbe-9513-c3ba0d7a8800",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bef4a874-a7a9-4e25-b3c0-8117e8098415",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "061c026f-cf12-423d-be18-f5328a2951af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baff0206-1d32-478c-9073-31aaa6a8904f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
